--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-between bg-green-500 mx-0 sm:mx-32 px-8 py-1 sm:mt-2">
   <div class="inline-block">
-    <strong><%= link_to "OS News", posts_path, class: "pr-2" %></strong> 
+    <strong><%= link_to "OSS News", posts_path, class: "pr-2" %></strong> 
     <%= link_to "top", posts_path %> |
     <%= link_to "new", posts_path(q: "newest") %> |
     <%= link_to "contribute", new_post_path %> |
